# autodl

./: LICENSE  README.md  autodl.py  repo_names.json  setup.cfg
docs/: README.md  repo_names-items-properties-bin_dir_pattern.md  repo_names-items-properties-chmod.md  repo_names-items-properties-copy_source_name.md  repo_names-items-properties-copy_to_bin.md  repo_names-items-properties-file_pattern.md  repo_names-items-properties-name.md  repo_names-items-properties-releases.md  repo_names-items-properties-repo.md  repo_names-items-properties-tag_replace-items.md  repo_names-items-properties-tag_replace.md  repo_names-items-properties-uncompress.md  repo_names-items-properties-uncompress_cmd.md  repo_names-items-properties-uncompress_flags.md  repo_names-items-properties-user.md  repo_names-items.md  repo_names.md
docs/html/: repo_names_documentation.html
docs/markdown/: repo_names_documentation.md
src/autodl/: __init__.py  argument_parser.py  autodl.py  downloader.py  repo_names.json  repo_names.schema.json  repo_names_schema.json  url.py  utils.py
