[metadata]
name = autodl
version = 0.0.1
author = Anirudh Sundar Subramaniam
author_email = anirudh.sundar@gmail.com
description = A tool to download and setup tools from github releases
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/anirudhsundar/autodl
project_urls =
    Bug Tracker = https://github.com/anirudhsundar/autodl/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =

[options.package_data]
autodl =
    repo_names.json
    repo_names_schema.json

install_requires =
    jsonschema>=3.2.0


[options.packages.find]
where = src
